<resources>
    <string name="app_name">MexicanPlaces RF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statue">Estado</string>
    <string name="state">state</string>
    <string name="update">Actualizacion</string>
    <string name="attractions">Atractivos turísticos</string>
    <string name="last_update">"Última actualización"</string>
    <string name="dish">Platillo típico</string>
    <string name="conection_error">Hubo un error de conexión</string>
    <string name="image_error">Imagen de error</string>
</resources>