<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkpurple"
    tools:context=".ui.adapters.fragments.PlaceDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dimbo"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/yellow"
                        android:textSize="40sp"
                        tools:text="Title" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:riv_corner_radius="5dp"
                        app:riv_border_color="@color/rose"
                        app:riv_border_width="4dp"
                        tools:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tvState"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/state"
                        android:textAlignment="center"
                        android:textColor="@color/rose"
                        android:textSize="35sp"
                        android:fontFamily="@font/dimbo"

                        />


                    <TextView
                        android:id="@+id/tvAttractions"
                        android:text="@string/attractions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="22dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/yellow"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/tvDish"
                        android:text="@string/dish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="22dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/yellow"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/tvLongDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="22dp"
                        android:paddingTop="15dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:lineHeight="27sp"
                        tools:text="Description" />

                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="2000"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>